--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>twitter4j-stream</artifactId>
             <version>4.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.restfb</groupId>
+            <artifactId>restfb</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
